# athena-latex-ide

./: .gitignore  CMakeLists.txt  README.md  TODO  athena.css  build.sh
assets/: CMakeLists.txt  athena-latex-ide.desktop  athena.css
assets/assistant/: metropolis.tex
cmake/: ValaPrecompile.cmake
schemas/: CMakeLists.txt  org.kostrykin.athena.gschema.xml
src/: AboutDialog.vala  AboutDialogButtons.vala  AnimationControl.vala  Animations.vala  Assistant.vala  Athena.vala  BuildLogView.vala  BuildManager.vala  CMakeLists.txt  CachedPackageAnalyzer.vala  CellRendererTextConditional.vala  CommandCompletionProvider.vala  CommandContext.vala  CommandSequence.vala  Drawables.vala  Editor.vala  FeatureCompletionProvider.vala  FileDialog.vala  FileManager.vala  FlashingShapesControl.vala  LoadingIndicator.vala  MainWindow.vala  PackageAnalyzer.vala  PdfPreview.vala  PopplerChoreographer.vala  PopplerDisplay.vala  PopplerPreview.vala  PopplerRenderer.vala  ReferenceCompletionProvider.vala  SearchManager.vala  Session.vala  SessionXml.vala  Settings.vala  SettingsDialog.vala  SimpleCommand.vala  SourceAnalyzer.vala  SourceFileManager.vala  SourceFileView.vala  SourcePartitioning.vala  SourceStructure.vala  (+4 more)
src/Assistant/: DownloadablePrerequisite.vala  FormPage.vala  FormValidator.vala  GeneralPage.vala  JobApplication.vala  Letter.vala  MetropolisPresentation.vala  PackagePreqrequisite.vala  Prerequisite.vala  PrerequisitesPage.vala  ProgramPrerequisite.vala  ProjectType.vala  SummaryPage.vala
src/Utils/: LineIterator.vala  RectD.vala
